# onboard_sdk_examples

./: .gitignore  CMakeLists.txt  README.md  _compass_calibration_progress_8hpp_source.html  _dive_time_8hpp_source.html  _drone_8hpp_source.html  _i_compass_calibration_8hpp_source.html  _i_observer_state_8hpp_source.html  _i_p_m_u_callbacks_8hpp_source.html  _i_tilt_control_8hpp_source.html  _imu_data_8hpp_source.html  _imu_self_test_8hpp_source.html  _indicators_setpoint_8hpp_source.html  _pioneer_drone_8hpp_source.html  _pioneer_thrusters_setpoint_8hpp_source.html  _state_estimates_8hpp_source.html  annotated.html  be-drone-battery_8cpp-example.html  be-drone-depth_8cpp-example.html  be-drone-imu_8cpp-example.html  be-drone-indicators_8cpp-example.html  be-drone-lights_8cpp-example.html  be-drone-movement_8cpp-example.html  be-drone-thrusters_8cpp-example.html  be-drone-tilt_8cpp-example.html  classblunux_1_1drone_1_1_drone-members.html  classblunux_1_1drone_1_1_drone.html  classblunux_1_1drone_1_1_pioneer_drone-members.html  classblunux_1_1drone_1_1_pioneer_drone.html  classblunux_1_1observer_1_1_dive_time-members.html  classblunux_1_1observer_1_1_dive_time.html  classblunux_1_1observer_1_1_i_compass_calibration-members.html  classblunux_1_1observer_1_1_i_compass_calibration.html  classblunux_1_1observer_1_1_i_observer_state-members.html  classblunux_1_1observer_1_1_i_observer_state.html  classblunux_1_1pmu_1_1_i_p_m_u_callbacks-members.html  classblunux_1_1pmu_1_1_i_p_m_u_callbacks.html  classblunux_1_1tilt_1_1_i_tilt_control-members.html  classblunux_1_1tilt_1_1_i_tilt_control.html  classes.html  (+77 more)
.devcontainer/: devcontainer.json
.github/workflows/: cross_compile.yaml  test.yaml
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  (+8 more)
src/: be-drone-attitude.cpp  be-drone-battery.cpp  be-drone-depth.cpp  be-drone-imu.cpp  be-drone-indicators.cpp  be-drone-lights.cpp  be-drone-logging.cpp  be-drone-movement.cpp  be-drone-thruster-forwarder.cpp  be-drone-thrusters.cpp  be-drone-tilt.cpp
